syntax = "proto3";
import "user.proto";

package db;

option go_package = "pocikode/simple-bank/pb";

message UpdateUserRequest {
  string username = 1;
  optional string fullname = 2;
  optional string email = 3;
  optional string password = 4;
}

message UpdateUserResponse {
  User user = 1;
}