syntax = "proto3";
import "google/protobuf/timestamp.proto";

package db;

option go_package = "pocikode/simple-bank/pb";

message User {
  string username = 1;
  string fullname = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}